# oag7/aha/model_products_response.go
@@ -19,8 +19,8 @@ var _ MappedNullable = &ProductsResponse{}
 
 // ProductsResponse struct for ProductsResponse
 type ProductsResponse struct {
-	Products []ProductMeta `json:"products,omitempty"`
-	Pagination *Pagination `json:"pagination,omitempty"`
+	Products             []ProductMeta `json:"products,omitempty"`
+	Pagination           *Pagination   `json:"pagination,omitempty"`
 	AdditionalProperties map[string]interface{}
 }
 
@@ -108,7 +108,7 @@ func (o *ProductsResponse) SetPagination(v Pagination) {
 }
 
 func (o ProductsResponse) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
+	toSerialize, err := o.ToMap()
 	if err != nil {
 		return []byte{}, err
 	}
@@ -188,5 +188,3 @@ func (v *NullableProductsResponse) UnmarshalJSON(src []byte) error {
 	v.isSet = true
 	return json.Unmarshal(src, &v.value)
 }
-
-
